--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Occhio di Luce</title>
   </head>
-  <body>
+  <body style="position: relative; min-height: 100vh;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
